2nd commit ▶ changed title ▶ changed youtube link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- developer src -->
     <script src="./js/developer.js"></script>
 
-    <title>Lim's web portfolio</title>
+    <title>Geekily Portfolio</title>
 </head>
 <body>
     <!-- intro gif -------------------------------------------------------------------------------------------------------- -->
